# lac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: banner.html
src/lac/: __init__.py  __main__.py  checks.py  cli.py  console.py  gitutil.py  home.py  link.py  meta.py  slug.py  slugdir.py  template.py
tests/: conftest.py  test_e2e.py  test_spec.py
